# Naumovich-Computer-Graphics-BSU

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md  main.cpp
lab2/: CMakeLists.txt  Processing.cpp  README.md  main.cpp  proclib.hpp
lab3/: CMakeLists.txt  COMP.md  EXPLANATIONS.md  README.md  RESULTS.md  main.cpp
